Enhance landscape dashboard layout and add throughput panel
- Adjusted figure size for better visibility.
- Modified grid layout to accommodate an additional column for new throughput panel.
- Updated panel titles and descriptions for clarity.
- Added a new panel (G) to display throughput metrics for LayoutLM and IVL3.5-8B.
- Improved text formatting and alignment in existing panels.
- Enhanced aesthetics by adjusting font sizes and box styles.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -2032,13 +2032,13 @@
     "# =============================================================================\n",
     "# LANDSCAPE DASHBOARD - Slide presentation format (16:9)\n",
     "# =============================================================================\n",
-    "# 16:9 aspect ratio: 13.3 x 7.5 inches\n",
+    "# 16:9 aspect ratio\n",
     "\n",
-    "fig = plt.figure(figsize=(13.3, 7.5), facecolor='white')\n",
+    "fig = plt.figure(figsize=(14, 8), facecolor='white')\n",
     "\n",
-    "# Create grid: 2 rows, 4 columns\n",
-    "gs = fig.add_gridspec(2, 4, height_ratios=[1.2, 1], width_ratios=[1.5, 0.8, 0.8, 1],\n",
-    "                      hspace=0.35, wspace=0.35, top=0.88, bottom=0.08, left=0.06, right=0.98)\n",
+    "# Create grid: 2 rows, 5 columns (split last column for F and G)\n",
+    "gs = fig.add_gridspec(2, 5, height_ratios=[1.2, 1], width_ratios=[1.5, 0.8, 0.8, 0.5, 0.5],\n",
+    "                      hspace=0.35, wspace=0.4, top=0.88, bottom=0.08, left=0.06, right=0.98)\n",
     "\n",
     "# Colors\n",
     "colors_current = '#2ecc71'\n",
@@ -2082,7 +2082,6 @@
     "ax1.axvline(x=0.5, color='gray', linestyle=':', alpha=0.5)\n",
     "sns.despine(ax=ax1)\n",
     "\n",
-    "# Add percentage labels\n",
     "for i, (_, row) in enumerate(plot_sorted.iterrows()):\n",
     "    ax1.text(row['current_accuracy'] + 0.01, i + 0.2, f\"{row['current_accuracy']:.0%}\", \n",
     "             va='center', ha='left', fontsize=7, color=colors_current)\n",
@@ -2145,8 +2144,8 @@
     "ax3.tick_params(axis='x', labelsize=9)\n",
     "sns.despine(ax=ax3)\n",
     "\n",
-    "# --- Panel D: Summary Statistics (top right) ---\n",
-    "ax4 = fig.add_subplot(gs[0, 3])\n",
+    "# --- Panel D: Summary Statistics (top right, spans 2 cols) ---\n",
+    "ax4 = fig.add_subplot(gs[0, 3:5])\n",
     "ax4.axis('off')\n",
     "\n",
     "current_short = CURRENT_MODEL_NAME.replace('InternVL', 'IVL').replace('-', '')\n",
@@ -2192,7 +2191,7 @@
     "\n",
     "ax4.set_title('D. Summary Statistics', fontsize=12, fontweight='bold', loc='left', pad=10)\n",
     "\n",
-    "# --- Panel E: Improvement per Field (bottom middle-left) ---\n",
+    "# --- Panel E: Improvement per Field (bottom middle) ---\n",
     "ax5 = fig.add_subplot(gs[1, 1:3])\n",
     "diff_sorted = plot_df.sort_values('difference')\n",
     "y_diff = np.arange(len(diff_sorted))\n",
@@ -2209,15 +2208,16 @@
     "ax5.set_xlim(min(diff_sorted['difference']) - 0.05, max(diff_sorted['difference']) + 0.05)\n",
     "sns.despine(ax=ax5)\n",
     "\n",
-    "# --- Panel F: Additional Capabilities (bottom right) ---\n",
+    "# --- Panel F: Additional Capabilities (bottom right-top) ---\n",
     "ax6 = fig.add_subplot(gs[1, 3])\n",
     "ax6.axis('off')\n",
     "\n",
-    "exc_lines = [\"F. ADDITIONAL CAPABILITIES\", f\"({CURRENT_MODEL_NAME} only)\", \"\"]\n",
+    "exc_lines = [\"F. ADDITIONAL\", \"CAPABILITIES\", f\"({CURRENT_MODEL_NAME.replace('InternVL', 'IVL')} only)\", \"\"]\n",
     "if len(exclusive_df) > 0:\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
-    "        exc_lines.append(f\"  {row['field']}: {acc_str}\")\n",
+    "        field_short = row['field'][:15] + '..' if len(row['field']) > 15 else row['field']\n",
+    "        exc_lines.append(f\"{field_short}: {acc_str}\")\n",
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
     "        exc_lines.append(\"\")\n",
     "        exc_lines.append(f\"Mean: {metrics['exclusive_mean']:.1%}\")\n",
@@ -2225,9 +2225,31 @@
     "    exc_lines.append(\"None\")\n",
     "exc_text = chr(10).join(exc_lines)\n",
     "\n",
-    "ax6.text(0.5, 0.5, exc_text, transform=ax6.transAxes, fontsize=10,\n",
+    "ax6.text(0.5, 0.5, exc_text, transform=ax6.transAxes, fontsize=8,\n",
     "         ha='center', va='center',\n",
-    "         bbox=dict(boxstyle='round,pad=0.5', facecolor='#e8f5e9', edgecolor='#2ecc71', linewidth=2))\n",
+    "         bbox=dict(boxstyle='round,pad=0.3', facecolor='#e8f5e9', edgecolor='#2ecc71', linewidth=2))\n",
+    "\n",
+    "# --- Panel G: Throughput (bottom right-bottom) ---\n",
+    "ax7 = fig.add_subplot(gs[1, 4])\n",
+    "\n",
+    "throughput_models = ['LayoutLM', 'IVL3.5-8B']\n",
+    "throughput_values = [3.5, 1.6]\n",
+    "throughput_colors = [colors_competing, colors_current]\n",
+    "\n",
+    "bars = ax7.barh(throughput_models, throughput_values, color=throughput_colors, height=0.5, \n",
+    "                edgecolor='black', linewidth=1)\n",
+    "\n",
+    "for bar, val in zip(bars, throughput_values):\n",
+    "    ax7.text(val + 0.08, bar.get_y() + bar.get_height()/2, \n",
+    "             f'{val:.1f}', va='center', fontsize=9, fontweight='bold')\n",
+    "\n",
+    "ax7.set_xlabel('pages/min', fontsize=9)\n",
+    "ax7.set_title('G. Throughput', fontsize=11, fontweight='bold', loc='left')\n",
+    "ax7.set_xlim(0, 5)\n",
+    "ax7.tick_params(axis='y', labelsize=9)\n",
+    "ax7.xaxis.grid(True, linestyle='--', alpha=0.7)\n",
+    "ax7.set_axisbelow(True)\n",
+    "sns.despine(ax=ax7)\n",
     "\n",
     "plt.savefig(OUTPUT_DIR / 'comparison_dashboard_landscape.png', dpi=600, bbox_inches='tight', \n",
     "            facecolor='white', edgecolor='none')\n",
