Refactor layout of dashboard panels in lmmpoc_layoutlm_comparison.ipynb
- Adjusted grid layout to 3 rows and 4 columns for better organization.
- Updated panel descriptions for clarity and consistency.
- Modified positioning of panels E, F, and G to enhance visual flow.
- Improved text formatting and alignment in panel F.

--- a/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
+++ b/notebooks_v2/lmmpoc_layoutlm_comparison.ipynb
@@ -2032,13 +2032,12 @@
     "# =============================================================================\n",
     "# LANDSCAPE DASHBOARD - Slide presentation format (16:9)\n",
     "# =============================================================================\n",
-    "# 16:9 aspect ratio\n",
     "\n",
     "fig = plt.figure(figsize=(14, 8), facecolor='white')\n",
     "\n",
-    "# Create grid: 2 rows, 5 columns (split last column for F and G)\n",
-    "gs = fig.add_gridspec(2, 5, height_ratios=[1.2, 1], width_ratios=[1.5, 0.8, 0.8, 0.5, 0.5],\n",
-    "                      hspace=0.35, wspace=0.4, top=0.88, bottom=0.08, left=0.06, right=0.98)\n",
+    "# Grid: 3 rows, 4 columns - F and G stack under D\n",
+    "gs = fig.add_gridspec(3, 4, height_ratios=[1.1, 0.5, 0.5], width_ratios=[1.5, 0.8, 0.8, 1],\n",
+    "                      hspace=0.3, wspace=0.35, top=0.88, bottom=0.08, left=0.06, right=0.98)\n",
     "\n",
     "# Colors\n",
     "colors_current = '#2ecc71'\n",
@@ -2055,7 +2054,6 @@
     "              f'Mean improvement: {metrics[\"mean_difference\"]:+.1%}', \n",
     "              fontsize=11, ha='center', va='center', color='#555')\n",
     "\n",
-    "# Legend\n",
     "from matplotlib.patches import Patch\n",
     "legend_elements = [\n",
     "    Patch(facecolor=colors_current, alpha=0.85, label=CURRENT_MODEL_NAME),\n",
@@ -2064,7 +2062,7 @@
     "fig.legend(handles=legend_elements, loc='upper right', bbox_to_anchor=(0.98, 0.98),\n",
     "           ncol=1, fontsize=10, frameon=True, fancybox=True)\n",
     "\n",
-    "# --- Panel A: Field-level comparison (left, spans 2 rows) ---\n",
+    "# --- Panel A: Field-level comparison (left, spans all 3 rows) ---\n",
     "ax1 = fig.add_subplot(gs[:, 0])\n",
     "plot_sorted = plot_df.sort_values('current_accuracy', ascending=True)\n",
     "y_pos = np.arange(len(plot_sorted))\n",
@@ -2088,7 +2086,7 @@
     "    ax1.text(row['competing_accuracy'] + 0.01, i - 0.2, f\"{row['competing_accuracy']:.0%}\", \n",
     "             va='center', ha='left', fontsize=7, color=colors_competing)\n",
     "\n",
-    "# --- Panel B: Radar Chart (top middle) ---\n",
+    "# --- Panel B: Radar Chart ---\n",
     "ax2 = fig.add_subplot(gs[0, 1], polar=True)\n",
     "\n",
     "cat_data = []\n",
@@ -2125,7 +2123,7 @@
     "ax2.set_yticklabels(['0.2', '', '0.6', '', '1.0'], fontsize=7)\n",
     "ax2.set_title('B. By Category', fontsize=12, fontweight='bold', loc='left', pad=15)\n",
     "\n",
-    "# --- Panel C: Distribution (top right-middle) ---\n",
+    "# --- Panel C: Distribution ---\n",
     "ax3 = fig.add_subplot(gs[0, 2])\n",
     "box_df = pd.DataFrame({\n",
     "    'Model': [CURRENT_MODEL_NAME] * len(plot_df) + [COMPETING_MODEL_NAME] * len(plot_df),\n",
@@ -2144,8 +2142,8 @@
     "ax3.tick_params(axis='x', labelsize=9)\n",
     "sns.despine(ax=ax3)\n",
     "\n",
-    "# --- Panel D: Summary Statistics (top right, spans 2 cols) ---\n",
-    "ax4 = fig.add_subplot(gs[0, 3:5])\n",
+    "# --- Panel D: Summary Statistics (top right) ---\n",
+    "ax4 = fig.add_subplot(gs[0, 3])\n",
     "ax4.axis('off')\n",
     "\n",
     "current_short = CURRENT_MODEL_NAME.replace('InternVL', 'IVL').replace('-', '')\n",
@@ -2191,8 +2189,8 @@
     "\n",
     "ax4.set_title('D. Summary Statistics', fontsize=12, fontweight='bold', loc='left', pad=10)\n",
     "\n",
-    "# --- Panel E: Improvement per Field (bottom middle) ---\n",
-    "ax5 = fig.add_subplot(gs[1, 1:3])\n",
+    "# --- Panel E: Improvement per Field (spans rows 1-2, cols 1-2) ---\n",
+    "ax5 = fig.add_subplot(gs[1:3, 1:3])\n",
     "diff_sorted = plot_df.sort_values('difference')\n",
     "y_diff = np.arange(len(diff_sorted))\n",
     "diff_colors = [colors_current if d >= 0 else '#e74c3c' for d in diff_sorted['difference']]\n",
@@ -2208,29 +2206,30 @@
     "ax5.set_xlim(min(diff_sorted['difference']) - 0.05, max(diff_sorted['difference']) + 0.05)\n",
     "sns.despine(ax=ax5)\n",
     "\n",
-    "# --- Panel F: Additional Capabilities (bottom right-top) ---\n",
+    "# --- Panel F: Additional Capabilities (row 1, col 3 - under D) ---\n",
     "ax6 = fig.add_subplot(gs[1, 3])\n",
     "ax6.axis('off')\n",
     "\n",
-    "exc_lines = [\"F. ADDITIONAL\", \"CAPABILITIES\", f\"({CURRENT_MODEL_NAME.replace('InternVL', 'IVL')} only)\", \"\"]\n",
+    "ax6.set_title('F. Additional Capabilities', fontsize=11, fontweight='bold', loc='left')\n",
+    "\n",
+    "model_short = CURRENT_MODEL_NAME.replace('InternVL', 'IVL')\n",
+    "exc_lines = [f\"({model_short} only)\", \"\"]\n",
     "if len(exclusive_df) > 0:\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
-    "        field_short = row['field'][:15] + '..' if len(row['field']) > 15 else row['field']\n",
-    "        exc_lines.append(f\"{field_short}: {acc_str}\")\n",
+    "        exc_lines.append(f\"{row['field']}: {acc_str}\")\n",
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
-    "        exc_lines.append(\"\")\n",
     "        exc_lines.append(f\"Mean: {metrics['exclusive_mean']:.1%}\")\n",
     "else:\n",
     "    exc_lines.append(\"None\")\n",
     "exc_text = chr(10).join(exc_lines)\n",
     "\n",
-    "ax6.text(0.5, 0.5, exc_text, transform=ax6.transAxes, fontsize=8,\n",
+    "ax6.text(0.5, 0.4, exc_text, transform=ax6.transAxes, fontsize=9,\n",
     "         ha='center', va='center',\n",
     "         bbox=dict(boxstyle='round,pad=0.3', facecolor='#e8f5e9', edgecolor='#2ecc71', linewidth=2))\n",
     "\n",
-    "# --- Panel G: Throughput (bottom right-bottom) ---\n",
-    "ax7 = fig.add_subplot(gs[1, 4])\n",
+    "# --- Panel G: Throughput (row 2, col 3 - under F) ---\n",
+    "ax7 = fig.add_subplot(gs[2, 3])\n",
     "\n",
     "throughput_models = ['LayoutLM', 'IVL3.5-8B']\n",
     "throughput_values = [3.5, 1.6]\n",
