--- a/notebooks_v2/ivl3_5_8b_batch_v2.ipynb
+++ b/notebooks_v2/ivl3_5_8b_batch_v2.ipynb
@@ -525,7 +525,144 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "#Cell 6\n# Load InternVL3.5-8B model\n# Model page: https://huggingface.co/OpenGVLab/InternVL3_5-8B\n# Using official loading pattern from HuggingFace model card\n\nrprint(\"[bold green]Loading InternVL3.5-8B model...[/bold green]\")\nrprint(\"[cyan]🚀 Model: InternVL3.5-8B (8.5B params: 0.3B vision + 8.2B language)[/cyan]\")\nrprint(\"[cyan]📖 Features: Cascade RL, Visual Resolution Router (ViR)[/cyan]\")\n\ntry:\n    # Clear any existing CUDA cache\n    if torch.cuda.is_available():\n        torch.cuda.empty_cache()\n        rprint(\"[blue]🧹 CUDA cache cleared[/blue]\")\n    \n    world_size = torch.cuda.device_count()\n    rprint(f\"[cyan]🖥️  Detected {world_size} GPU(s)[/cyan]\")\n    rprint(\"[cyan]📥 Loading model (official HuggingFace pattern)...[/cyan]\")\n    \n    # Official loading pattern from https://huggingface.co/OpenGVLab/InternVL3_5-8B\n    model = AutoModel.from_pretrained(\n        CONFIG['MODEL_PATH'],\n        torch_dtype=torch.bfloat16,\n        low_cpu_mem_usage=True,\n        use_flash_attn=CONFIG['USE_FLASH_ATTN'],\n        trust_remote_code=True,\n    ).eval().cuda()\n    \n    # Load tokenizer\n    rprint(\"[cyan]📥 Loading tokenizer...[/cyan]\")\n    tokenizer = AutoTokenizer.from_pretrained(\n        CONFIG['MODEL_PATH'],\n        trust_remote_code=True,\n        use_fast=False\n    )\n    \n    # Set generation parameters\n    model.config.max_new_tokens = CONFIG['MAX_NEW_TOKENS']\n    \n    rprint(\"[green]✅ Model and tokenizer loaded successfully![/green]\")\n    \n    # ============================================================================\n    # GPU MEMORY DISPLAY\n    # ============================================================================\n    if torch.cuda.is_available():\n        device_count = torch.cuda.device_count()\n        \n        if device_count > 1:\n            rprint(f\"[blue]🔄 GPU Memory Status ({device_count} GPUs available, model on GPU 0):[/blue]\")\n            \n            total_allocated = 0\n            total_capacity = 0\n            \n            for gpu_id in range(device_count):\n                gpu_allocated = torch.cuda.memory_allocated(gpu_id) / 1e9\n                gpu_capacity = torch.cuda.get_device_properties(gpu_id).total_memory / 1e9\n                gpu_name = torch.cuda.get_device_name(gpu_id)\n                \n                total_allocated += gpu_allocated\n                total_capacity += gpu_capacity\n                \n                usage_pct = (gpu_allocated / gpu_capacity) * 100 if gpu_capacity > 0 else 0\n                rprint(f\"   GPU {gpu_id} ({gpu_name}): {gpu_allocated:.1f}GB/{gpu_capacity:.0f}GB ({usage_pct:.1f}%)\")\n            \n            rprint(f\"[blue]📊 Total: {total_allocated:.1f}GB allocated, {total_capacity:.0f}GB capacity[/blue]\")\n        else:\n            allocated = torch.cuda.memory_allocated() / 1e9\n            total = torch.cuda.get_device_properties(0).total_memory / 1e9\n            gpu_name = torch.cuda.get_device_name(0)\n            usage_pct = (allocated / total) * 100 if total > 0 else 0\n            \n            rprint(f\"[blue]📊 GPU {gpu_name}: {allocated:.1f}GB/{total:.0f}GB ({usage_pct:.1f}%)[/blue]\")\n    \n    # ============================================================================\n    # CONFIGURATION TABLE\n    # ============================================================================\n    from rich.table import Table\n    \n    config_table = Table(title=\"🔧 InternVL3.5-8B Model Configuration\")\n    config_table.add_column(\"Setting\", style=\"cyan\")\n    config_table.add_column(\"Value\", style=\"yellow\")\n    config_table.add_column(\"Status\", style=\"green\")\n    \n    model_name = Path(CONFIG['MODEL_PATH']).name\n    config_table.add_row(\"Model Path\", model_name, \"✅ Valid\")\n    config_table.add_row(\"Model Type\", \"InternVL3.5-8B\", \"✅ Cascade RL + ViR\")\n    config_table.add_row(\"Device Placement\", str(next(model.parameters()).device), \"✅ Loaded\")\n    \n    quant_method = \"16-bit\" if not CONFIG['USE_QUANTIZATION'] else \"8-bit\"\n    config_table.add_row(\"Quantization Method\", quant_method, \"✅ Configured\")\n    config_table.add_row(\"Data Type\", \"bfloat16\", \"✅ Recommended\")\n    config_table.add_row(\"Max New Tokens\", str(CONFIG['MAX_NEW_TOKENS']), \"✅ Generation Ready\")\n    config_table.add_row(\"Max Tiles\", str(CONFIG['MAX_TILES']), \"✅ H200 Optimized\")\n    \n    if torch.cuda.is_available():\n        device_count = torch.cuda.device_count()\n        if device_count > 1:\n            gpu_info = f\"{device_count}x {torch.cuda.get_device_name(0)} ({total_capacity:.0f}GB total)\"\n            gpu_status = \"✅ Model on GPU 0\"\n        else:\n            gpu_info = f\"{torch.cuda.get_device_name(0)} ({total:.0f}GB)\"\n            gpu_status = \"✅ Single GPU\"\n    else:\n        gpu_info = \"CPU\"\n        gpu_status = \"💻 CPU Mode\"\n    config_table.add_row(\"GPU Configuration\", gpu_info, gpu_status)\n    \n    param_count = sum(p.numel() for p in model.parameters())\n    config_table.add_row(\"Model Parameters\", f\"{param_count:,}\", \"✅ Loaded\")\n    \n    flash_attn_status = \"✅ Enabled\" if CONFIG['USE_FLASH_ATTN'] else \"⚠️ Disabled\"\n    config_table.add_row(\"Flash Attention\", str(CONFIG['USE_FLASH_ATTN']), flash_attn_status)\n    \n    console.print(config_table)\n    \n    # Initialize the hybrid processor with loaded model components\n    rprint(\"[cyan]🔧 Initializing document-aware processor...[/cyan]\")\n    hybrid_processor = DocumentAwareInternVL3HybridProcessor(\n        field_list=UNIVERSAL_FIELDS,\n        model_path=CONFIG['MODEL_PATH'],\n        debug=CONFIG['VERBOSE'],\n        pre_loaded_model=model,\n        pre_loaded_tokenizer=tokenizer,\n        prompt_config=PROMPT_CONFIG,\n        max_tiles=CONFIG['MAX_TILES']\n    )\n    \n    rprint(\"[bold green]✅ InternVL3.5-8B ready for document-aware processing[/bold green]\")\n    rprint(f\"[cyan]🔲 Using {CONFIG['MAX_TILES']} tiles for dense OCR[/cyan]\")\n    \nexcept Exception as e:\n    rprint(f\"[red]❌ Error loading model: {e}[/red]\")\n    rprint(\"[yellow]💡 Ensure transformers>=4.52.1 is installed[/yellow]\")\n    rprint(\"[yellow]💡 Ensure flash-attn is installed: pip install flash-attn --no-build-isolation[/yellow]\")\n    rprint(\"[yellow]💡 Check model path is correct[/yellow]\")\n    raise"
+   "source": [
+    "#Cell 6\n",
+    "# Load InternVL3.5-8B model\n",
+    "# Model page: https://huggingface.co/OpenGVLab/InternVL3_5-8B\n",
+    "# Using official loading pattern from HuggingFace model card\n",
+    "\n",
+    "rprint(\"[bold green]Loading InternVL3.5-8B model...[/bold green]\")\n",
+    "rprint(\"[cyan]🚀 Model: InternVL3.5-8B (8.5B params: 0.3B vision + 8.2B language)[/cyan]\")\n",
+    "rprint(\"[cyan]📖 Features: Cascade RL, Visual Resolution Router (ViR)[/cyan]\")\n",
+    "\n",
+    "try:\n",
+    "    # Clear any existing CUDA cache\n",
+    "    if torch.cuda.is_available():\n",
+    "        torch.cuda.empty_cache()\n",
+    "        rprint(\"[blue]🧹 CUDA cache cleared[/blue]\")\n",
+    "    \n",
+    "    world_size = torch.cuda.device_count()\n",
+    "    rprint(f\"[cyan]🖥️  Detected {world_size} GPU(s)[/cyan]\")\n",
+    "    rprint(\"[cyan]📥 Loading model (official HuggingFace pattern)...[/cyan]\")\n",
+    "    \n",
+    "    # Official loading pattern from https://huggingface.co/OpenGVLab/InternVL3_5-8B\n",
+    "    model = AutoModel.from_pretrained(\n",
+    "        CONFIG['MODEL_PATH'],\n",
+    "        torch_dtype=torch.bfloat16,\n",
+    "        low_cpu_mem_usage=True,\n",
+    "        use_flash_attn=CONFIG['USE_FLASH_ATTN'],\n",
+    "        trust_remote_code=True,\n",
+    "    ).eval().cuda()\n",
+    "    \n",
+    "    # Load tokenizer\n",
+    "    rprint(\"[cyan]📥 Loading tokenizer...[/cyan]\")\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(\n",
+    "        CONFIG['MODEL_PATH'],\n",
+    "        trust_remote_code=True,\n",
+    "        use_fast=False\n",
+    "    )\n",
+    "    \n",
+    "    # Set generation parameters\n",
+    "    model.config.max_new_tokens = CONFIG['MAX_NEW_TOKENS']\n",
+    "    \n",
+    "    rprint(\"[green]✅ Model and tokenizer loaded successfully![/green]\")\n",
+    "    \n",
+    "    # ============================================================================\n",
+    "    # GPU MEMORY DISPLAY\n",
+    "    # ============================================================================\n",
+    "    if torch.cuda.is_available():\n",
+    "        device_count = torch.cuda.device_count()\n",
+    "        \n",
+    "        if device_count > 1:\n",
+    "            rprint(f\"[blue]🔄 GPU Memory Status ({device_count} GPUs available, model on GPU 0):[/blue]\")\n",
+    "            \n",
+    "            total_allocated = 0\n",
+    "            total_capacity = 0\n",
+    "            \n",
+    "            for gpu_id in range(device_count):\n",
+    "                gpu_allocated = torch.cuda.memory_allocated(gpu_id) / 1e9\n",
+    "                gpu_capacity = torch.cuda.get_device_properties(gpu_id).total_memory / 1e9\n",
+    "                gpu_name = torch.cuda.get_device_name(gpu_id)\n",
+    "                \n",
+    "                total_allocated += gpu_allocated\n",
+    "                total_capacity += gpu_capacity\n",
+    "                \n",
+    "                usage_pct = (gpu_allocated / gpu_capacity) * 100 if gpu_capacity > 0 else 0\n",
+    "                rprint(f\"   GPU {gpu_id} ({gpu_name}): {gpu_allocated:.1f}GB/{gpu_capacity:.0f}GB ({usage_pct:.1f}%)\")\n",
+    "            \n",
+    "            rprint(f\"[blue]📊 Total: {total_allocated:.1f}GB allocated, {total_capacity:.0f}GB capacity[/blue]\")\n",
+    "        else:\n",
+    "            allocated = torch.cuda.memory_allocated() / 1e9\n",
+    "            total = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
+    "            gpu_name = torch.cuda.get_device_name(0)\n",
+    "            usage_pct = (allocated / total) * 100 if total > 0 else 0\n",
+    "            \n",
+    "            rprint(f\"[blue]📊 GPU {gpu_name}: {allocated:.1f}GB/{total:.0f}GB ({usage_pct:.1f}%)[/blue]\")\n",
+    "    \n",
+    "    # ============================================================================\n",
+    "    # CONFIGURATION TABLE\n",
+    "    # ============================================================================\n",
+    "    from rich.table import Table\n",
+    "    \n",
+    "    config_table = Table(title=\"🔧 InternVL3.5-8B Model Configuration\")\n",
+    "    config_table.add_column(\"Setting\", style=\"cyan\")\n",
+    "    config_table.add_column(\"Value\", style=\"yellow\")\n",
+    "    config_table.add_column(\"Status\", style=\"green\")\n",
+    "    \n",
+    "    model_name = Path(CONFIG['MODEL_PATH']).name\n",
+    "    config_table.add_row(\"Model Path\", model_name, \"✅ Valid\")\n",
+    "    config_table.add_row(\"Model Type\", \"InternVL3.5-8B\", \"✅ Cascade RL + ViR\")\n",
+    "    config_table.add_row(\"Device Placement\", str(next(model.parameters()).device), \"✅ Loaded\")\n",
+    "    \n",
+    "    quant_method = \"16-bit\" if not CONFIG['USE_QUANTIZATION'] else \"8-bit\"\n",
+    "    config_table.add_row(\"Quantization Method\", quant_method, \"✅ Configured\")\n",
+    "    config_table.add_row(\"Data Type\", \"bfloat16\", \"✅ Recommended\")\n",
+    "    config_table.add_row(\"Max New Tokens\", str(CONFIG['MAX_NEW_TOKENS']), \"✅ Generation Ready\")\n",
+    "    config_table.add_row(\"Max Tiles\", str(CONFIG['MAX_TILES']), \"✅ H200 Optimized\")\n",
+    "    \n",
+    "    if torch.cuda.is_available():\n",
+    "        device_count = torch.cuda.device_count()\n",
+    "        if device_count > 1:\n",
+    "            gpu_info = f\"{device_count}x {torch.cuda.get_device_name(0)} ({total_capacity:.0f}GB total)\"\n",
+    "            gpu_status = \"✅ Model on GPU 0\"\n",
+    "        else:\n",
+    "            gpu_info = f\"{torch.cuda.get_device_name(0)} ({total:.0f}GB)\"\n",
+    "            gpu_status = \"✅ Single GPU\"\n",
+    "    else:\n",
+    "        gpu_info = \"CPU\"\n",
+    "        gpu_status = \"💻 CPU Mode\"\n",
+    "    config_table.add_row(\"GPU Configuration\", gpu_info, gpu_status)\n",
+    "    \n",
+    "    param_count = sum(p.numel() for p in model.parameters())\n",
+    "    config_table.add_row(\"Model Parameters\", f\"{param_count:,}\", \"✅ Loaded\")\n",
+    "    \n",
+    "    flash_attn_status = \"✅ Enabled\" if CONFIG['USE_FLASH_ATTN'] else \"⚠️ Disabled\"\n",
+    "    config_table.add_row(\"Flash Attention\", str(CONFIG['USE_FLASH_ATTN']), flash_attn_status)\n",
+    "    \n",
+    "    console.print(config_table)\n",
+    "    \n",
+    "    # Initialize the hybrid processor with loaded model components\n",
+    "    rprint(\"[cyan]🔧 Initializing document-aware processor...[/cyan]\")\n",
+    "    hybrid_processor = DocumentAwareInternVL3HybridProcessor(\n",
+    "        field_list=UNIVERSAL_FIELDS,\n",
+    "        model_path=CONFIG['MODEL_PATH'],\n",
+    "        debug=CONFIG['VERBOSE'],\n",
+    "        pre_loaded_model=model,\n",
+    "        pre_loaded_tokenizer=tokenizer,\n",
+    "        prompt_config=PROMPT_CONFIG,\n",
+    "        max_tiles=CONFIG['MAX_TILES']\n",
+    "    )\n",
+    "    \n",
+    "    rprint(\"[bold green]✅ InternVL3.5-8B ready for document-aware processing[/bold green]\")\n",
+    "    rprint(f\"[cyan]🔲 Using {CONFIG['MAX_TILES']} tiles for dense OCR[/cyan]\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    rprint(f\"[red]❌ Error loading model: {e}[/red]\")\n",
+    "    rprint(\"[yellow]💡 Ensure transformers>=4.52.1 is installed[/yellow]\")\n",
+    "    rprint(\"[yellow]💡 Ensure flash-attn is installed: pip install flash-attn --no-build-isolation[/yellow]\")\n",
+    "    rprint(\"[yellow]💡 Check model path is correct[/yellow]\")\n",
+    "    raise"
+   ]
   },
   {
    "cell_type": "markdown",
