--- a/ivl3_5_8b.ipynb
+++ b/ivl3_5_8b.ipynb
@@ -135,12 +135,15 @@
     "\n",
     "# Project-specific imports - consistent with ivl3_cli.py\n",
     "from common.batch_analytics import BatchAnalytics\n",
-    "from common.batch_processor import BatchDocumentProcessor, load_document_field_definitions\n",
+    "from common.batch_processor import (\n",
+    "    BatchDocumentProcessor,\n",
+    "    load_document_field_definitions,\n",
+    ")\n",
     "from common.batch_reporting import BatchReporter\n",
     "from common.batch_visualizations import BatchVisualizer\n",
     "from common.evaluation_metrics import load_ground_truth\n",
-    "from common.pipeline_config import discover_images\n",
     "from common.gpu_optimization import emergency_cleanup\n",
+    "from common.pipeline_config import discover_images\n",
     "from models.document_aware_internvl3_processor import (\n",
     "    DocumentAwareInternVL3HybridProcessor,\n",
     ")\n",
@@ -409,7 +412,7 @@
     "print(f\"📁 Model path: {CONFIG['MODEL_PATH']}\")\n",
     "print(f\"📁 Output base: {CONFIG['OUTPUT_BASE']}\")\n",
     "print(f\"🏠 Project root: {PROJECT_ROOT}\")\n",
-    "print(f\"📋 Field definitions loaded from YAML:\")\n",
+    "print(\"📋 Field definitions loaded from YAML:\")\n",
     "for doc_type, fields in DOCUMENT_FIELD_DEFINITIONS.items():\n",
     "    print(f\"   - {doc_type}: {len(fields)} fields\")\n",
     "print(f\"📋 Universal fields (union): {len(UNIVERSAL_FIELDS)}\")\n",
